--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ actix-web = "4"
 dotenv = "0.15.0"
 env_logger = "0.10.0"
 redis = "0.22.3"
+serde = { version = "1.0", features = ["derive"] }
+uuid = { version = "1.3.0", features = ["v4", "serde"]}
