--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ env_logger = "0.10.0"
 redis = "0.22.3"
 serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "1.3.0", features = ["v4", "serde"]}
+actix-cors = "0.6.4"
